# modbus2mqtt

./: CMakeLists.txt  README.md  appsettings.cpp  appsettings.h  autoquery.cpp  autoquery.h  main.cpp  modbus.cpp  modbus.h  modbus2mqtt.cfg.temp  modbus2mqtt.service  mqtt.cpp  mqtt.h
.github/workflows/: build.yml
